--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -586,7 +586,7 @@ p {
 .btn-outline-primary:hover,
 .btn-outline-primary:focus,
 .btn-outline-primary:active {
-    background-color: var(--main-brand-color);
+    background-color: var(--brand-color);
     border-color: var(--main-brand-color);
     color: #fff;
 }
