--- a/assets/styles/styles.css
+++ b/assets/styles/styles.css
@@ -242,7 +242,7 @@ p {
     width: 500px
 }
 .aboutbf5e9e9e7ee746db .searchBtn{
-    background-color:#A560F4 ;
+    background-color:rgb(255, 187, 0);
     border-radius: 7px;
     color: white;
     font-weight: bold
@@ -250,13 +250,16 @@ p {
 /* #agadu(bf5e9e9e7ee746db) #css ends  */
 
 /* #suki(s1fae57451461b568) #css starts  */
+.sliders1fae57451461b568 .QM{
+    color: red;
+}
 .sliders1fae57451461b568 .card img{
     height: 50px;
     width: 50px;
     margin-left: 50px
 }
 .sliders1fae57451461b568 .btnStyle{
-    background-color: #1DA599
+    background-color: rgb(255, 187, 0)
 }
 .sliders1fae57451461b568 .icon{
     color: white
@@ -267,6 +270,10 @@ p {
 /* #suki(s1fae57451461b568) #css ends  */
 
 /* #single(eb6af6ab30a03fde) #css starts  */
+
+.serviceeb6af6ab30a03fde .heading4{
+    margin-top: 15px;
+}
 .serviceeb6af6ab30a03fde{
     background: #eee
 }
@@ -274,13 +281,13 @@ p {
     font-size:15px
 }
 .serviceeb6af6ab30a03fde .box{
-    padding:40px 0px
+    padding:0px 0px
 }
 
 .serviceeb6af6ab30a03fde .box-part{
     background:#FFF;
     border-radius:0;
-    padding:60px 10px;
+    padding:30px 10px;
     margin:30px 0px
 }
 .serviceeb6af6ab30a03fde .text{
@@ -288,16 +295,16 @@ p {
 }
 
 .serviceeb6af6ab30a03fde .fa{
- color: aqua
+ color: red
 }
 /* #single(eb6af6ab30a03fde) #css ends  */
 
     /* #tagur(a72342011f2d707e) #css starts  */
     .teama72342011f2d707e .row.heading h2 {
-        color: #fff;
+        color: red;
         font-size: 52.52px;
         line-height: 95px;
-        font-weight: 400;
+        font-weight: bold;
         text-align: center;
         margin: 0 0 40px;
         padding-bottom: 20px
@@ -380,7 +387,7 @@ p {
         color:#2a2a2a
     }
     .teama72342011f2d707e .our-webcoderskull .cnt-block h3 a:hover{
-        color:#337ab7
+        color:rgb(255, 187, 0)
     }
     .teama72342011f2d707e .our-webcoderskull .cnt-block p{ 
        color:#2a2a2a; 
@@ -408,6 +415,7 @@ p {
     }
     /* #tagur(a72342011f2d707e) #css ends  */
 
+
 /* #qui(c98b9fb5a898c4551) #css starts  */
 .quetec98b9fb5a898c4551 .DescriptionHeading {
     font-size: 50px
@@ -416,6 +424,10 @@ p {
 .quetec98b9fb5a898c4551 .descriptionImage img{
     height: 400px;
     width: 500px
+}
+.quetec98b9fb5a898c4551 .btn-outline{
+    background-color: rgb(255, 187, 0);
+    font-weight: bold
 }
 /* #qui(c98b9fb5a898c4551) #css ends  */
 
@@ -428,7 +440,7 @@ p {
 }
 
 .footerf439c65adee997571 .footer-wrap h3 {
-    color: #0A033C;
+    color: red;
     font-size: 17px;
     text-transform: uppercase;
     margin-bottom: 25px
@@ -448,7 +460,7 @@ p {
 }
 
 .footerf439c65adee997571 .footer-links li a {
-    font-size: 13px;
+    font-size: 16px;
     line-height: 30px;
     color: #0A033C;
     text-decoration: none
@@ -462,7 +474,7 @@ p {
 }
 
 .footerf439c65adee997571 .footer-category li a {
-    font-size: 13px;
+    font-size: 16px;
     line-height: 30px;
     color: #0A033C;
     text-decoration: none
