--- a/assets/styles/texax.css
+++ b/assets/styles/texax.css
@@ -9,3 +9,60 @@
 }
 /* #harshall(a9823ff3dfbdaa29) #css ends  */
 /*****harshall*****/
+
+/*****agni*****/
+/* #agni(cded716dce36a6e8) #css starts  */
+.aboutcded716dce36a6e8{
+    padding: 2.5rem 0
+}
+.aboutcded716dce36a6e8 .badge{
+    font-size: 20px;
+    color: #37B9C6;
+    background-color: #fff
+}
+.aboutcded716dce36a6e8 .DescriptionHeading {
+    color: rgb(0, 0, 0);
+    font-size: 44px
+}
+
+.aboutcded716dce36a6e8 .DescriptionPara {
+    color: #808080;
+    font-size: 20px
+}
+
+.aboutcded716dce36a6e8 .searchBtn{
+    background-color:#37B9C6;
+    border-radius: 15px;
+    color: white
+}
+/* #agni(cded716dce36a6e8) #css ends  */
+/*****agni*****/
+
+/*****cjerry*****/
+/* #cjerry(calltoactioncaqgz6ps5b0) #css starts  */
+.calltoactioncaqgz6ps5b0{
+    padding: 2.5rem 0
+}
+.calltoactioncaqgz6ps5b0 h1{
+    font-size: 32px
+}
+.calltoactioncaqgz6ps5b0 .lead{
+    font-size: 20px
+}
+.calltoactioncaqgz6ps5b0 .btn-primary{
+    background-color: #37B9C6;
+    border-color: #37B9C6;
+    box-shadow: none;
+    border-radius: 0px;
+    color: rgb(0, 0, 0)
+}
+.calltoactioncaqgz6ps5b0 .btn-primary:not(:disabled):not(.disabled):focus,
+.calltoactioncaqgz6ps5b0 .btn-primary:not(:disabled):not(.disabled):active,
+.calltoactioncaqgz6ps5b0 .btn-primary:hover
+{
+    background-color: #37B9C6;
+    border-color: #37B9C6;
+    color: rgb(0, 0, 0)
+}
+/* #cjerry(calltoactioncaqgz6ps5b0) #css ends  */
+/*****cjerry*****/
