--- a/assets/styles/texax.css
+++ b/assets/styles/texax.css
@@ -66,3 +66,19 @@
 }
 /* #cjerry(calltoactioncaqgz6ps5b0) #css ends  */
 /*****cjerry*****/
+
+/*****caaron*****/
+/* #caaron(caaroncbadii8z6i5) #css starts  */
+.caaroncbadii8z6i5{
+    padding: 2.5rem 0
+}
+.caaroncbadii8z6i5 a{
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    font-size: 16px
+}
+.caaroncbadii8z6i5 a:hover{
+    color: #37B9C6
+}
+/* #caaron(caaroncbadii8z6i5) #css ends  */
+/*****caaron*****/
