--- a/assets/styles/texax.css
+++ b/assets/styles/texax.css
@@ -82,3 +82,88 @@
 }
 /* #caaron(caaroncbadii8z6i5) #css ends  */
 /*****caaron*****/
+
+/*****chane*****/
+/* #chane(cbadii8z6i5) #css starts  */
+.cbadii8z6i5{
+    padding: 2.5rem 0
+}
+.cbadii8z6i5 h1{
+    font-size: 32px
+}
+.cbadii8z6i5 .lead{
+    font-size: 20px
+}
+.cbadii8z6i5 a{
+    color: rgb(0, 0, 0);
+    font-weight: 600
+}
+.cbadii8z6i5 a:hover{
+    color: #37B9C6;
+    font-weight: 600
+}
+/* #chane(cbadii8z6i5) #css ends  */
+/*****chane*****/
+
+/*****freya*****/
+/* #freya(freyategxpfzk1ni) #css starts */
+.freyategxpfzk1ni .fdb-block {
+    padding: 0px
+  }
+.freyategxpfzk1ni .fdb-block .fdb-touch {
+    border-top: none
+}
+.freyategxpfzk1ni .fdb-block h2 {
+    font-size: 18px;
+    font-weight: 600
+}
+/* #freya(freyategxpfzk1ni) #css starts */
+/*****freya*****/
+
+/*****tanika*****/ 
+/* #tanika(teamtmpxpt1wbh8) #css starts */
+.teamtmpxpt1wbh8 .fdb-block {
+    padding: 2.5rem 0
+   }
+   .teamtmpxpt1wbh8 h1{
+    font-size: 32px
+   }
+   .teamtmpxpt1wbh8 .lead{
+    font-size: 20px
+   }
+/* #tanika(teamtmpxpt1wbh8) #css ends */
+/*****tanika*****/
+
+/*****tioni*****/
+    /* #tioni(testimonialtmrwms6esfu) #css starts  */
+    .testimonialtmrwms6esfu .fdb-block {
+        padding: 2.5rem 0
+       }
+
+    .testimonialtmrwms6esfu  .fdb-block .fdb-touch {
+          border-top: solid 0.3125rem #fff
+        }
+
+        .testimonialtmrwms6esfu  .h5 {
+            font-size: 16px
+          }
+    /* #tioni(testimonialtmrwms6esfu) #css ends  */
+/*****tioni*****/
+
+/*****foot*****/
+    /* #foot(footftkxsoham8f) #css starts  */
+    .footftkxsoham8f .fdb-block{
+        padding: 2.5rem 0
+    }
+    .footftkxsoham8f .fdb-block .nav-link{
+        margin-left: -14px;
+    }
+    .footftkxsoham8f .fdb-block a{
+        color: #1F1F1F
+    }
+    .footftkxsoham8f .fdb-block a:hover{
+        font-weight: 600;
+        color: #A14CED
+    }
+    /* #foot(footftkxsoham8f) #css ends  */
+/*****foot*****/
